I've updated the Font Awesome and Normalize.css CDN versions. I've also added comments to some media queries for notation. #fff background colors were added to some elements in the skills section to deal with the graphic animation issues where they appear jumbled up on mobile for a few miliseconds when the content of the skills section are shown.

--- a/css/main.css
+++ b/css/main.css
@@ -556,6 +556,7 @@ h1{
     width: 45%;
     margin-bottom: auto;
     font-weight: 100;
+    background-color: #fff;
 }
 
 .skills-icon{
@@ -585,6 +586,7 @@ h1{
     padding-left: 1.2rem;
     position: relative;
     transition: transform 0.09s ease-in-out;
+    background-color: #fff;
 }
 
 .skill-block:hover{
@@ -1422,7 +1424,7 @@ b{
 
 /*----------Media Queries----------*/
 
-
+/*landscape for phones*/
 @media only screen 
 and (max-device-width: 900px) 
 and (orientation: landscape) {
@@ -1432,6 +1434,7 @@ and (orientation: landscape) {
 
 }
 
+/*Super HiDPI tablets e.g. Ipad Pro Kindle Fire HD*/
 @media (max-device-width: 1100px)
 and (orientation: portrait){
     :root {
@@ -1439,12 +1442,7 @@ and (orientation: portrait){
             }
         }
 
-@media (max-device-width: 800px){
-    :root {
-        font-size: 16px;
-            }
-        }
-
+/*Smaller tablets e.g. Ipad*/
 @media (max-device-width: 800px)
 and (orientation: portrait){
 :root {
@@ -1452,6 +1450,7 @@ and (orientation: portrait){
         }
     }
 
+/*HD + QHD Phablet(should cover tall aspect ratios also)*/
 @media (max-device-width: 500px)
 and (orientation: portrait){
 :root {
@@ -1459,6 +1458,7 @@ and (orientation: portrait){
         }
     }
 
+/*qHD sub 5" phones e.g. iPhone 8 */
 @media (max-device-width: 400px)
 and (orientation: portrait){
     :root {
@@ -1466,6 +1466,7 @@ and (orientation: portrait){
             }
         }
 
+/* Low px density sub 4" phone e.g. iPhone SE phone */
 @media (max-device-width: 360px)
 and (orientation: portrait){
     :root {
@@ -1473,18 +1474,21 @@ and (orientation: portrait){
             }
         }
 
+/*2K laptops*/
 @media only screen  and (min-width : 2000px) {
     :root {
         font-size: calc(16px * 1.3);
         }
     }
-    
+  
+/*4K laptops*/
 @media only screen  and (min-width : 3000px) {
     :root {
         font-size: calc(16px * 2.4);
         }
     }
 
+/*Landscape for phones*/
 @media only screen 
 and (max-device-width: 900px) 
 and (orientation: landscape) {
@@ -1494,6 +1498,7 @@ and (orientation: landscape) {
 
 }
 
+/*Super HiDPI tablets e.g. Ipad Pro Kindle Fire HD*/
 @media (max-device-width: 1100px)
 and (orientation: portrait){
     p {
@@ -1501,6 +1506,7 @@ and (orientation: portrait){
             }
         }
 
+/*Smaller tablets e.g. Ipad*/
 @media (max-device-width: 800px)
 and (orientation: portrait){
 p {
@@ -1508,6 +1514,7 @@ p {
         }
     }
 
+/*HD + QHD Phablet(should cover tall aspect ratios also)*/
 @media (max-device-width: 500px)
 and (orientation: portrait){
 p {
@@ -1516,6 +1523,7 @@ p {
         }
     }
 
+/*qHD sub 5" phones e.g. iPhone 8 */
 @media (max-device-width: 400px)
 and (orientation: portrait){
     p {
@@ -1523,6 +1531,7 @@ and (orientation: portrait){
             }
         }
 
+/* Low px density sub 4" phone e.g. iPhone SE phone */
 @media (max-device-width: 360px)
 and (orientation: portrait){
     p {
@@ -1530,12 +1539,14 @@ and (orientation: portrait){
             }
         }
 
+/*2K laptops*/
 @media only screen  and (min-width : 2000px) {
     p {
         font-size: calc(16px * 1.3);
         }
     }
-    
+
+/*4K laptops*/
 @media only screen  and (min-width : 3000px) {
     p {
         font-size: calc(16px * 2.4);
